--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,7 @@ Support for OpenAPI3 in https://github.com/Koriit/ktor-controllers[ktor-controll
 The idea is to validate your OpenAPI spec against your code instead of generating it from your code.
 
 [WARNING]
-This library in *Work In Progress*. It doesn't support all *relevant* elements of OpenAPI specification like
+This library is *Work In Progress*. It doesn't support all *relevant* elements of OpenAPI specification like
 oauth, callback or encoding yet. However, all structural elements should be supported.
 
 
